--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ autopep8 = "^1.5.2"
 sqlalchemy = "^1.3.16"
 gino = "^1.0.0"
 twine = "^3.1.1"
+wheel = "^0.34.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
