--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,29 @@
 asyncpg==0.20.1
-autopep8==1.5.2
+bleach==3.1.5
+certifi==2020.4.5.1
+cffi==1.14.0; sys_platform == "linux"
+chardet==3.0.4
+cryptography==2.9.2; sys_platform == "linux"
 databases==0.3.2
+docutils==0.16
 gino==1.0.0
-pycodestyle==2.5.0
+idna==2.9
+jeepney==0.4.3; sys_platform == "linux"
+keyring==21.2.1
+packaging==20.3
+pkginfo==1.5.0.1
+pycparser==2.20; sys_platform == "linux"
+pygments==2.6.1
+pyparsing==2.4.7
+pywin32-ctypes==0.2.0; sys_platform == "win32"
+readme-renderer==26.0
+requests==2.23.0
+requests-toolbelt==0.9.1
+secretstorage==3.1.2; sys_platform == "linux"
+six==1.14.0
 sqlalchemy==1.3.16
+tqdm==4.45.0
+twine==3.1.1
+urllib3==1.25.9
+webencodings==0.5.1
+wheel==0.34.2
