--- a/requirements.txt
+++ b/requirements.txt
@@ -1,51 +1,50 @@
-alembic==1.4.2
-asyncpg==0.20.1
-bcrypt==3.1.7
-bleach==3.1.5
+alembic==1.4.2; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.4.0")
+asyncpg==0.20.1; python_full_version >= "3.5.0"
+bcrypt==3.1.7; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.4.0")
+bleach==3.1.5; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
 certifi==2020.4.5.1
-cffi==1.14.0
+cffi==1.14.0; sys_platform == "linux"
 chardet==3.0.4
-click==7.1.2
-cryptography==2.9.2; sys_platform == "linux"
-databases==0.3.2
-dnspython==1.16.0
-docutils==0.16
+click==7.1.2; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
+cryptography==2.9.2; python_version >= "2.7" and python_full_version < "3.0.0" and sys_platform == "linux" or python_full_version >= "3.5.0" and sys_platform == "linux"
+databases==0.3.2; python_version >= "3.6"
+dnspython==1.16.0; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.4.0"
+docutils==0.16; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
 email-validator==1.1.1
-fastapi==0.59.0
-gino==1.0.0
-gino-starlette==0.1.1
+fastapi==0.59.0; python_version >= "3.6"
+gino-starlette==0.1.1; python_version >= "3.6" and python_version < "4.0"
+gino==1.0.0; python_version >= "3.5" and python_version < "4.0"
 h11==0.9.0
 httptools==0.1.1; sys_platform != "win32" and sys_platform != "cygwin" and platform_python_implementation != "PyPy"
-idna==2.9
-jeepney==0.4.3; sys_platform == "linux"
-keyring==21.2.1
-mako==1.1.3
-markupsafe==1.1.1
-packaging==20.3
+idna==2.9; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.4.0"
+jeepney==0.4.3; python_version >= "3.5" and sys_platform == "linux"
+keyring==21.2.1; python_version >= "3.6"
+mako==1.1.3; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.4.0"
+markupsafe==1.1.1; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.4.0"
+packaging==20.3; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.4.0"
 passlib==1.7.2
 pkginfo==1.5.0.1
-psycopg2-binary==2.8.5
-pycparser==2.20
-pydantic==1.6.1
-pygments==2.6.1
+psycopg2-binary==2.8.5; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.4.0")
+pycparser==2.20; python_version >= "2.7" and python_full_version < "3.0.0" and sys_platform == "linux" or python_full_version >= "3.4.0" and sys_platform == "linux"
+pydantic==1.6.1; python_version >= "3.6"
+pygments==2.6.1; python_version >= "3.5"
 pyjwt==1.7.1
-pyparsing==2.4.7
-python-dateutil==2.8.1
+pyparsing==2.4.7; python_version >= "2.6" and python_full_version < "3.0.0" or python_full_version >= "3.3.0"
+python-dateutil==2.8.1; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.3.0"
 python-dotenv==0.14.0
 python-editor==1.0.4
 pywin32-ctypes==0.2.0; sys_platform == "win32"
 readme-renderer==26.0
-requests==2.23.0
 requests-toolbelt==0.9.1
-secretstorage==3.1.2; sys_platform == "linux"
-six==1.14.0
-sqlalchemy==1.3.18
-starlette==0.13.4
-tqdm==4.45.0
-twine==3.1.1
-urllib3==1.25.9
+requests==2.23.0; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
+secretstorage==3.1.2; python_version >= "3.5" and sys_platform == "linux"
+six==1.14.0; python_version >= "2.7" and python_full_version < "3.0.0" and sys_platform == "linux" or python_full_version >= "3.3.0" and sys_platform == "linux"
+sqlalchemy==1.3.20; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.4.0")
+starlette==0.13.4; python_version >= "3.6"
+tqdm==4.45.0; python_version >= "2.6" and python_full_version < "3.0.0" or python_full_version >= "3.2.0"
+twine==3.1.1; python_version >= "3.6"
+urllib3==1.25.9; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version < "4"
 uvicorn==0.11.5
 uvloop==0.14.0; sys_platform != "win32" and sys_platform != "cygwin" and platform_python_implementation != "PyPy"
 webencodings==0.5.1
-websockets==8.1
-wheel==0.34.2
+websockets==8.1; python_full_version >= "3.6.1"
